# Vidify

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: .dockerignore  Dockerfile  manage.py  pyproject.toml  startup.sh
src/accounts/: serializer.py  views.py
src/video/: models.py  processing_utils.py  serializers.py  urls.py  views.py
src/video/migrations/: 0001_initial.py  0002_alter_video_video_file.py  0002_remove_watermarkedvideo_user_alter_video_user.py  0002_watermarkedvideo_custom_coordinate_x_and_more.py
src/vidify/: asgi.py  settings.py  urls.py  wsgi.py
